plugins/javaFX/testData/highlighting/unresolvedRootTag.fxml
<?xml version="1.0" encoding="UTF-8"?>

<?import javafx.scene.control.TextField?>
<?import javafx.scene.control.Label?>

<fx:root type="<error descr="Cannot resolve class or package 'unknownPackage'">unknownPackage</error>.<error descr="Cannot resolve class 'unknownClass'">unknownClass</error>" xmlns:fx="http://javafx.com/fxml">
  <TextField fx:id="textField" text=""/>
  <Label text="Hello"/>
</fx:root>